# rage

./: .gitignore  Cargo.toml  roadmap.md
assets/shaders/: default.frag  default.vert
macros/: Cargo.toml
macros/src/: component.rs  component_derive.rs  error.rs  lib.rs
src/: lib.rs
src/audio/: controller.rs  listener.rs  mod.rs  source.rs  wav.rs
src/core/: app.rs  assets.rs  config.rs  keyboard.rs  mod.rs  mouse.rs  scene.rs  state.rs  window.rs  world.rs
src/ecs/: component.rs  entity.rs  go.rs  mod.rs  model_renderer.rs  sprite_renderer.rs  transform.rs
src/renderer/: buffer.rs  camera.rs  default.vert  font.rs  mod.rs  model.rs  primitive.rs  renderer.rs  shader.rs  texture.rs
src/utils/: block.rs  error.rs  mod.rs  mouse_pos.rs
tests/: audio_test.rs  entity_test.rs  font_test.rs  game.rs  georg_washingmachine.rs  model_test.rs  pog_test.rs  state_machine_test.rs  unzip_test.rs
tests/components/: player.rs
tests/crate_tests/: block_test.rs  entity_test.rs
