[package]
name = "rage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glam = "0.20.5"
image = "0.24.3"
openal = "0.2.2"
lazy_static = "1.4.0"
rage_macros = { path = "macros", version = "0.1.0" }

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

